[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/gameplay/Ragdoll.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gameplay/pause-layer/pause-layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/TileSetterOut/Brick/Brick/tileset_Brick.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/gameplay/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gameplay/gameplay.gd" type="Script" id=5]
[ext_resource path="res://scenes/gameplay/KillZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gameplay/RoundEnd.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Final/Background_0.png" type="Texture" id=12]
[ext_resource path="res://assets/Final/Background_1.png" type="Texture" id=13]

[node name="Gameplay" type="Node"]
script = ExtResource( 5 )

[node name="PauseLayer" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 9
format = 1
tile_data = PoolIntArray( 0, 0, 4, 1, 0, 196609, 2, 0, 196609, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196609, 14, 0, 196609, 15, 0, 196609, 16, 0, 196609, 17, 0, 196609, 18, 0, 196609, 19, 0, 196609, 20, 0, 196609, 21, 0, 196609, 22, 0, 196609, 23, 0, 196609, 24, 0, 196609, 25, 0, 196609, 26, 0, 196609, 27, 0, 196609, 28, 0, 196609, 29, 0, 196609, 30, 0, 196609, 31, 0, 196609, 32, 0, 196609, 33, 0, 196609, 34, 0, 196609, 35, 0, 196609, 36, 0, 196609, 37, 0, 196609, 38, 0, 196609, 39, 0, 196609, 40, 0, 196609, 41, 0, 196609, 42, 0, 196609, 43, 0, 196609, 44, 0, 196609, 45, 0, 196609, 46, 0, 196609, 47, 0, 196609, 48, 0, 196609, 49, 0, 196609, 50, 0, 196609, 51, 0, 196609, 52, 0, 196609, 53, 0, 196609, 54, 0, 196609, 55, 0, 196609, 56, 0, 196609, 57, 0, 196609, 58, 0, 196609, 59, 0, 196609, 60, 0, 196609, 61, 0, 196609, 62, 0, 196609, 63, 0, 196609, 64, 0, 196609, 65, 0, 196609, 66, 0, 196609, 67, 0, 196609, 68, 0, 196609, 69, 0, 196609, 70, 0, 196609, 71, 0, 196609, 72, 0, 196609, 73, 0, 196609, 74, 0, 196609, 75, 0, 196609, 76, 0, 196609, 77, 0, 196609, 78, 0, 196609, 79, 0, 196609, 80, 0, 196609, 81, 0, 196609, 82, 0, 196609, 83, 0, 196609, 84, 0, 196609, 85, 0, 7, 65536, 0, 65539, 65621, 0, 65539, 131072, 0, 65539, 131157, 0, 65539, 196608, 0, 65539, 196693, 0, 65539, 262144, 0, 65539, 262229, 0, 65539, 327680, 0, 65539, 327765, 0, 65539, 393216, 0, 65539, 393301, 0, 65539, 458752, 0, 65539, 458837, 0, 65539, 524288, 0, 65539, 524373, 0, 65539, 589824, 0, 65539, 589909, 0, 65539, 655360, 0, 65539, 655424, 0, 3, 655428, 0, 3, 655445, 0, 65539, 720896, 0, 65539, 720960, 0, 65539, 720964, 0, 65539, 720981, 0, 65539, 786432, 0, 65539, 786434, 0, 3, 786496, 0, 65539, 786500, 0, 65539, 786517, 0, 65539, 851968, 0, 65539, 851970, 0, 65539, 852032, 0, 196612, 852033, 0, 196609, 852034, 0, 196609, 852035, 0, 196609, 852036, 0, 196615, 852053, 0, 65539, 917504, 0, 65539, 917506, 0, 196612, 917507, 0, 196609, 917508, 0, 8, 917509, 0, 196609, 917510, 0, 196610, 917589, 0, 65539, 983040, 0, 65539, 983044, 0, 65539, 983125, 0, 65539, 1048576, 0, 65539, 1048580, 0, 65539, 1048661, 0, 65539, 1114112, 0, 131076, 1114113, 0, 1, 1114114, 0, 1, 1114115, 0, 1, 1114116, 0, 131080, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 1, 1114120, 0, 1, 1114121, 0, 1, 1114122, 0, 2, 1114197, 0, 65539, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65538, 1179733, 0, 65539, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65538, 1245269, 0, 65539, 1310720, 0, 65536, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65538, 1310805, 0, 65539, 1376256, 0, 65536, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65538, 1376341, 0, 65539, 1441792, 0, 131072, 1441793, 0, 131073, 1441794, 0, 131073, 1441795, 0, 131073, 1441796, 0, 131073, 1441797, 0, 131073, 1441798, 0, 131073, 1441799, 0, 131073, 1441800, 0, 131073, 1441801, 0, 131073, 1441802, 0, 196613, 1441803, 0, 196609, 1441804, 0, 196609, 1441805, 0, 196609, 1441806, 0, 196609, 1441807, 0, 196609, 1441808, 0, 196609, 1441809, 0, 196609, 1441810, 0, 196609, 1441811, 0, 196609, 1441812, 0, 196609, 1441813, 0, 196609, 1441814, 0, 196609, 1441815, 0, 196609, 1441816, 0, 196609, 1441817, 0, 196609, 1441818, 0, 196609, 1441819, 0, 196609, 1441820, 0, 196609, 1441821, 0, 196609, 1441822, 0, 196609, 1441823, 0, 196609, 1441824, 0, 196609, 1441825, 0, 196609, 1441826, 0, 196609, 1441827, 0, 196609, 1441828, 0, 196609, 1441829, 0, 196609, 1441830, 0, 196609, 1441831, 0, 196609, 1441832, 0, 196609, 1441833, 0, 196609, 1441834, 0, 196609, 1441835, 0, 196609, 1441836, 0, 196609, 1441837, 0, 196609, 1441838, 0, 196609, 1441839, 0, 196609, 1441840, 0, 196609, 1441841, 0, 196609, 1441842, 0, 196609, 1441843, 0, 196609, 1441844, 0, 196609, 1441845, 0, 196609, 1441846, 0, 196609, 1441847, 0, 196609, 1441848, 0, 196609, 1441849, 0, 196609, 1441850, 0, 196609, 1441851, 0, 196609, 1441852, 0, 196609, 1441853, 0, 196609, 1441854, 0, 196609, 1441855, 0, 196609, 1441856, 0, 196609, 1441857, 0, 196609, 1441858, 0, 196609, 1441859, 0, 196609, 1441860, 0, 196609, 1441861, 0, 196609, 1441862, 0, 196609, 1441863, 0, 196609, 1441864, 0, 196609, 1441865, 0, 196609, 1441866, 0, 196609, 1441867, 0, 196609, 1441868, 0, 196609, 1441869, 0, 196609, 1441870, 0, 196609, 1441871, 0, 196609, 1441872, 0, 196609, 1441873, 0, 196609, 1441874, 0, 196609, 1441875, 0, 196609, 1441876, 0, 196609, 1441877, 0, 196615 )

[node name="Ragdoll" parent="." instance=ExtResource( 1 )]
position = Vector2( 157, 404 )

[node name="KillZone" parent="." instance=ExtResource( 6 )]

[node name="SpawnPoint" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 156, 373 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1279.0
margin_bottom = 715.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1279.0
margin_bottom = 715.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundEnd" parent="." instance=ExtResource( 7 )]

[connection signal="ragdoll_destroyed" from="Ragdoll" to="." method="_on_Ragdoll_ragdoll_destroyed"]
[connection signal="ragdoll_high_impact" from="Ragdoll" to="." method="_on_Ragdoll_ragdoll_high_impact"]
